--- a/src/App.css
+++ b/src/App.css
@@ -2,32 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,4 +9,41 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+h1{
+  margin:0;
+}
+
+.App-header {
+  background-color: #280C43;
+  color: white;
+  padding: 20px;
+  text-align: center;
+}
+
+.App-footer {
+  position: fixed; /* Fixed position at the bottom */
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color:#280C43;
+  color: white;
+  text-align: center;
+  padding: 10px 0;
+}
+
+.App-footer .copyright {
+  display: inline-block; /* Ensure inline block display for centering */
+}
+
+.MuiPaper-root 
+{
+  box-shadow: none !important;
+}
+
+.image-section img{
+  max-width: 100%;
+  height: auto;
+  width: 400px;
 }
